# GNN

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GOALS.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml
ablation_logs/: fix_preprocessing.py  run_ablation.py
bench/: bench_hotpaths.py  eval.py  leaderboard.md  seeds.py
bench/datasets/: README.md  download.py
bench/published/bpi2020/metrics/: gat_metrics.json  lstm_metrics.json
bench/published/bpi2020_gat/metrics/: gat_metrics.json
bench/published/bpi2020_lstm/: clustering_results.json  preprocessing_info.json
bench/published/bpi2020_lstm/metrics/: baseline_metrics.json  lstm_metrics.json  process_analysis.json
bench/published/bpi2020_lstm_resource/metrics/: lstm_metrics.json
bench/published/bpi2020_lstm_seeds/: seed_variance.json
bench/published/bpi2020_lstm_temporal/metrics/: lstm_metrics.json  process_analysis.json
bench/published/smoke500/metrics/: baseline_metrics.json  gat_metrics.json  lstm_metrics.json
bench/published/smoke500_lstm/: clustering_results.json  lstm_metrics.json  preprocessing_info.json  process_analysis.json
data_analysis/notebooks/: process_mining_viz.ipynb
gnn_cli/: __init__.py  __main__.py  cli.py  diff.py  explain.py  export.py  serve.py  smoke.py  stages.py  suffix.py  whatif.py
gnn_rs/: Cargo.toml  README.md
gnn_rs/src/: bridge.rs  cli.rs  config.rs  main.rs
gnn_rs/tests/: integration.rs
models/: baselines.py  gat_model.py  lstm_model.py  transformer_model.py
modules/: _fast.py  data_preprocessing.py  process_mining.py  rl_optimization.py  utils.py
notebooks/: 01_bpi2020_tutorial.ipynb  README.md  build.py
pm_fast/: Cargo.toml  README.md  pyproject.toml
pm_fast/python/pm_fast/: __init__.py
pm_fast/src/: lib.rs
processmine/: README.md  advanced_workflow.py  dgl.ipynb  models.ipynb
processmine/processmine/core/: ablation_runner.py  advanced_workflow.py  runner.py  training.py
processmine/processmine/data/: graphs.py  loader.py
processmine/processmine/models/: factory.py
processmine/processmine/models/gnn/: __init__.py  architectures.py
processmine/processmine/models/sequence/: lstm.py
processmine/processmine/process_mining/: analysis.py  conformance.py
processmine/processmine/tests/: integration_test.py
processmine/processmine/utils/: dataloader.py
processmine/processmine/visualization/: ablation_viz.py  viz.py
tests/: conftest.py  golden_smoke_metrics.json  test_baselines.py  test_canary.py  test_cli.py  test_config_toml.py  test_data_preprocessing.py  test_dataset_drift.py  test_diff.py  test_explain.py  test_export.py  test_fast_kernels.py  test_models.py  test_process_mining.py  test_properties.py  test_rl.py  test_seeds.py  test_serve.py  test_suffix.py  test_whatif.py
tests/canonical_metrics/: README.md
visualization/: process_viz.py
