[project]
name = "gnn-process-mining"
version = "0.2.0"
description = "Process mining with Graph Neural Networks, LSTMs, and tabular RL."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Somesh Misra" },
  { name = "Shashank Dixit" },
]
keywords = ["process-mining", "gnn", "graph-attention", "pm4py", "bpi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/erphq/gnn"
Issues = "https://github.com/erphq/gnn/issues"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["results", "input"]

[tool.ruff.lint]
# Conservative rule set so the linter catches real bugs (Pyflakes) and
# obvious style issues without churning the legacy code in this repo.
# Tighten over time: add "B", "UP", "SIM" once those are clean.
select = ["E", "F"]
ignore = [
  "E501",   # line length is enforced by formatter, not the linter
  "E741",   # ambiguous variable names — accept `l`, `O`, etc. in math code
  "E402",   # module-level import not at top — sometimes intentional after sys.path tweaks
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::FutureWarning",
]
