[project]
name = "gnn-process-mining"
version = "0.4.0"
description = "Process mining with Graph Neural Networks, LSTMs, and tabular RL."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Somesh Misra" },
  { name = "Shashank Dixit" },
]
keywords = ["process-mining", "gnn", "graph-attention", "pm4py", "bpi"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/erphq/gnn"
Issues = "https://github.com/erphq/gnn/issues"

[project.scripts]
gnn = "gnn_cli.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.10", "hypothesis>=6"]
serve = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "pydantic>=2"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["gnn_cli*", "models*", "modules*", "visualization*"]
exclude = ["tests*", "input*", "results*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["results", "input"]

[tool.ruff.lint]
# E (pycodestyle), F (pyflakes), B (bugbear), UP (pyupgrade),
# SIM (simplify). The expanded set caught real issues during the v0.4
# audit (unused loop vars, raise-from chains, zip without strict=).
select = ["E", "F", "B", "UP", "SIM"]
ignore = [
  "E501",   # line length is enforced by formatter, not the linter
  "E741",   # ambiguous variable names — accept `l`, `O`, etc. in math code
  "E402",   # module-level import not at top — sometimes intentional after sys.path tweaks
  "B008",   # function call in argument default — fastapi Body(...), torch.device("cpu")
            # are documented patterns; the warning is noise here.
  "B007",   # unused loop control variable — rename to _var when intentional
            # (we have a few intentional positional unpacks in tests).
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F841"]

# ----------------------------------------------------------------------
# mypy: gradual typing posture.
#
# We're not strict-clean across the whole tree (yet) — that's a multi-
# day cleanup of the model + module layers. Instead we run mypy with a
# permissive default and lean strict on the public CLI surface in
# `gnn_cli/`, which is the layer downstream consumers actually import.
# Run locally:
#
#     mypy gnn_cli
#
# CI runs ruff + pytest; mypy is not blocking yet (gradual rollout).
# ----------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_strict_optional = true
files = ["gnn_cli"]

[[tool.mypy.overrides]]
module = ["modules.*", "models.*", "visualization.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
  "canary: end-to-end canary that runs `gnn smoke` and compares metrics to golden (slow; skip with -m 'not canary')",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::FutureWarning",
]
