[package]
name = "pm_fast"
version = "0.1.0"
edition = "2021"
description = "Rust hot-path kernels for the gnn process-mining pipeline."
license = "MIT"

[lib]
name = "pm_fast"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
numpy = "0.22"
ndarray = "0.16"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
