[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "pm-fast"
version = "0.1.0"
description = "Rust hot-path kernels for the gnn process-mining pipeline (PyO3)."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pm_fast._native"
python-source = "python"
manifest-path = "Cargo.toml"
